[package]
name = "buzuki-search"
version = "0.1.0"
authors = ["Panagiotis Ktistakis <panktist@gmail.com>"]
edition = "2018"

[dependencies]
env_logger = "0.7.1"
futures = "0.1.29"
hyper = "0.12.35"
lazy_static = "1.4.0"
log = "0.4.8"
regex = "1.3.1"
serde_json = "1.0.41"
tantivy = "0.10.2"
tempfile = "3.1.0"
url = "2.1.0"

[profile.release]
lto = true
codegen-units = 1
opt-level = "s"
