[package]
name = "buzuki-search"
version = "0.1.0"
authors = ["Panagiotis Ktistakis <panktist@gmail.com>"]
edition = "2018"

[dependencies]
env_logger = "0.8.3"
futures = "0.1.29"
hyper = "0.12.35"
lazy_static = "1.4.0"
log = "0.4.14"
regex = "1.4.3"
serde_json = "1.0.62"
tantivy = "0.14.0"
tempfile = "3.2.0"
url = "2.2.0"

[profile.release]
lto = true
codegen-units = 1
opt-level = "s"
