[package]
name = "buzuki-search"
version = "0.1.0"
authors = ["Panagiotis Ktistakis <panktist@gmail.com>"]
edition = "2018"

[dependencies]
env_logger = "0.8.3"
futures = "0.3.13"
hyper = { version = "0.14.5", features = ["full"] }
lazy_static = "1.4.0"
log = "0.4.14"
regex = "1.4.5"
serde_json = "1.0.64"
tantivy = "0.14.0"
tempfile = "3.2.0"
tokio = { version = "1.4.0", features = ["full"] }
url = "2.2.1"

[profile.release]
lto = true
codegen-units = 1
opt-level = "s"
